# mpa-scale-solver

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: BANACH_SUBSTRATE.md  BLOCK_IN.md  CONTINUOUS_FLOW.md  EXR_CHANNEL_MANIFEST.md  NORTH_STAR.md  ORDER_OF_OPERATIONS.md  PREREQUISITES.md  SIDECAR_FORMAT.md  TANGENT_FLOW.md  WISHLIST.md
mpa_scale_solver/: __init__.py  _native_shim.py  _test_fixtures.py  _version.py  active_learning.py  banach.py  cross_substrate.py  flow.py  gfdr_model.py  jax_core.py  jax_ops.py  jax_pytree.py  mcp_server.py  operations.py  plotting.py  provenance.py  self_test.py  sensitivity.py  sidecar.py  streaming.py  substrate_signal.py  symbolic_query.py  types.py  validation.py
rust/: Cargo.toml  pyproject.toml
rust/src/: flow.rs  gfdr_model.rs  lib.rs  math.rs  operations.rs  optim.rs  provenance.rs  sidecar.rs  types.rs  validation.rs
rust/src/bindings/: mod.rs  python.rs  wasm.rs
rust/tests/: bit_identity.rs  math.rs  types_smoke.rs  wasm_smoke.mjs
rust/tests/fixtures/: emit_jax_core_reference.py  jax_core_reference.json
tests/: conftest.py  test_active_learning.py  test_banach_camera.py  test_bayesian_inversion.py  test_camera_migration.py  test_caputo_flow.py  test_continuous_self_test.py  test_cross_substrate.py  test_differentiability.py  test_fixtures.py  test_gradient_inversion.py  test_intents.py  test_learned_field.py  test_mcp_server.py  test_notebook_repr.py  test_operations.py  test_provenance.py  test_rust_parity.py  test_seed_corpus.py  test_sensitivity_backprop.py  test_sidecar.py  test_streaming.py  test_symbolic_query.py  test_validation.py
tests/fixtures/camera/: frame_0000.json  frame_0001.json  frame_0002.json  frame_0003.json  frame_0004.json  frame_0005.json  frame_0006.json  frame_0007.json  frame_0008.json  frame_0009.json  frame_0010.json  frame_0011.json  frame_0012.json  frame_0013.json  frame_0014.json  frame_0015.json  frame_0016.json  frame_0017.json  frame_0018.json  frame_0019.json  frame_0020.json  frame_0021.json  frame_0022.json  frame_0023.json  frame_0024.json  frame_0025.json  frame_0026.json  frame_0027.json  frame_0028.json  frame_0029.json  frame_0030.json  frame_0031.json  frame_0032.json  frame_0033.json  frame_0034.json  frame_0035.json  frame_0036.json  frame_0037.json  frame_0038.json  frame_0039.json  (+40 more)
