[package]
name = "mpa-scale-solver"
version = "0.1.0"
edition = "2024"
description = "MPA scale-management kernel — Rust port of mpa-scale-solver v5 Python. Per-seed reproducibility against the reference Python; jax_core.py is the math source."
license = "MIT"

[lib]
name = "mpa_scale_solver"
# rlib for `cargo test` and Rust consumers. cdylib for the pyo3 / wasm
# bindings — neither is built unless the corresponding feature is on, so
# `cargo build --release` (default features) emits only the rlib half.
# A single crate covers both bindings because each is built in a separate
# cargo invocation with a distinct target + feature set: pyo3 against
# the native host triple with `--features python`, wasm-bindgen against
# `wasm32-unknown-unknown` with `--features wasm`. The cdylib outputs
# never collide.
crate-type = ["rlib", "cdylib"]
doctest = false  # math formulas in /// comments aren't runnable Rust

[dependencies]
# types.rs derives Serialize/Deserialize on the runtime dataclasses
# mirroring mpa_scale_solver/types.py. serde_json::Value appears in
# public field types (axes / extras / refinement / ambiguity_regions),
# so serde_json is a runtime dep too.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# provenance::provenance_hash mirrors Python's blake2b-4 fingerprint of
# (solver_version | operation | dispatch_path | table_version). The
# blake2b digest is what makes the hash byte-identical across Python and
# Rust; substituting a different hash would break cross-language
# provenance parity.
blake2 = { version = "0.10", default-features = false }

# Session 9 — bindings. Both deps are optional and gated by feature
# flags so default builds stay binding-free.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"], optional = true }
pythonize = { version = "0.22", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
default = []
# Build the pyo3 extension module. Consumed by `maturin develop`
# (see pyproject.toml). Produces `_mpa_scale_solver_native.pyd` on
# Windows / `.so` on Linux. The pure-Python `mpa_scale_solver/__init__.py`
# detects it at import time and routes the wrapped variants through it
# when present.
python = ["dep:pyo3", "dep:pythonize"]
# Build the wasm-bindgen module. Consumed by `wasm-pack build`.
# Produces `mpa_scale_solver_bg.wasm` + JS glue under `rust/pkg/`.
# mpa-auditor consumes this output for browser-side native solving.
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
